[package]
name = "desperates_everywhere"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
apistos = { version = "0.2.2", features = ["extras", "swagger-ui"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
schemars = { package = "apistos-schemars", version = "0.8" }
serde = { version = "1.0.201", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
